--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Local search app</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
+    <link 
+        href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" 
+        rel="stylesheet"
+    />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.1-dev/mapbox-gl-geocoder.min.js"></script>
+    <link
+        rel="stylesheet"
+        href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.1-dev/mapbox-gl-geocoder.css"
+        type="text/css"
+    />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
 
+      #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoibGl1Y2lyIiwiYSI6ImNtNmlpZXV2cDA5MHAycXEycTdnamcxYTgifQ.3zHmc6lb0rTDqviif3czcQ';
+        const map = new mapboxgl.Map({
+          container: 'map', // Container ID
+          style: 'mapbox://styles/mapbox/satellite-streets-v12', // Map style to use
+          center: [-122.36036851234655, 47.62068406114724], // Starting position [lng, lat]
+          zoom: 11 // Starting zoom level
+        });
+
+        const marker = new mapboxgl.Marker() // initialize a new marker
+        marker.setLngLat([-122.36036851234655, 47.62068406114724]) // Marker [lng, lat] coordinates
+        marker.addTo(map); // Add the marker to the map
+
+        const geocoder = new MapboxGeocoder({ // Initialize the geocoder
+            accessToken: mapboxgl.accessToken, // Set the access token
+            mapboxgl: mapboxgl, // Set the mapbox-gl instance
+            marker: false // Do not use the default marker style
+        });
+
+        // Add the geocoder to the map
+        map.addControl(geocoder);
+    </script>
+</body>
+</html>
